<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="174dp"
        android:layout_marginStart="129dp"
        android:layout_marginTop="100dp"
        android:text="@string/temperature"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.258"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/temperatureText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="173dp"
        android:layout_marginStart="153dp"
        android:layout_marginTop="32dp"
        android:text="@string/value"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="36dp"
        android:layout_marginTop="60dp"
        android:text="@string/maximum"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureText1" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/minimum"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/temperatureText1" />

    <EditText
        android:id="@+id/maxEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="55dp"
        android:layout_marginTop="38dp"
        android:width="80dp"
        android:ems="10"
        android:hint="@string/max_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/minEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="150dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="38dp"
        android:width="80dp"
        android:ems="10"
        android:hint="@string/min_hint"
        android:inputType="number"
        android:maxLength="2"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintEnd_toStartOf="@+id/maxEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

</android.support.constraint.ConstraintLayout>